--- a/index.html
+++ b/index.html
@@ -256,14 +256,14 @@
             <div class="grownup">
               <label class="grownup-label" for="">Взрослые:</label>
               <div class="wrapper-choice-grownup">
-                <button class="grownup-butten-minus">
+                <button class="butten-minus minus">
                   <svg width="13" height="1" viewBox="0 0 13 1" xmlns="http://www.w3.org/2000/svg">
                     <path opacity="0.3" d="M0 0L0 1L13 1V0L0 0Z"/>
                   </svg>
                   <span class="visually-hidden">Минус</span>
                 </button>
                 <input class="grownup-number" id="number-minus" type="text" value="2">
-                <button class="grownup-button-plus">
+                <button class="button-plus plus">
                   <svg width="13" height="13" viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 6H7V0H6v6H0v1h6v6h1V7h6V6Z"/>
                   </svg>
@@ -274,14 +274,14 @@
             <div class="child">
               <label class="child-label" for="">Дети:</label>
               <div class="wrapper-choice-kids">
-                <button class="child-butten-minus">
+                <button class="butten-minus minus">
                   <svg width="13" height="1" viewBox="0 0 13 1" xmlns="http://www.w3.org/2000/svg">
                     <path opacity="0.3" d="M0 0L0 1L13 1V0L0 0Z" />
                   </svg>
                   <span class="visually-hidden">Минус</span>
                 </button>
                 <input class="child-number" id="number-minus" type="text" value="1">
-                <button class="child-button-plus">
+                <button class="button-plus plus">
                   <svg width="13" height="13" viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 6H7V0H6v6H0v1h6v6h1V7h6V6Z" />
                   </svg>
