добавляет в разметку тултип

--- a/index.html
+++ b/index.html
@@ -272,7 +272,13 @@
               </div>
             </div>
             <div class="child">
-              <label class="child-label" for="">Дети:</label>
+              <span class="child-label">
+                <label class="child-label" for="">Дети:</label>
+                <span class="tooltip">
+                  <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label"></button>
+                  <span class="tooltip-text" role="tooltip" id="tooltip-label">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                </span>
+              </span>
               <div class="wrapper-choice-kids">
                 <button class="butten-minus minus">
                   <svg width="13" height="1" viewBox="0 0 13 1" xmlns="http://www.w3.org/2000/svg">
