--- a/catalog.html
+++ b/catalog.html
@@ -297,7 +297,8 @@
       </main>
       <section class="appointment-catalog">
         <h2 class="appointment-catalog-title">Подпишитесь на рассылку</h2>
-        <p class="appointment-catalog-paragraph">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+        <p class="appointment-catalog-paragraph">Только полезная информация и никакого спама,<br> честное бойскаутское!
+        </p>
         <form class="appointment-catalog-form-email" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="appointment-email">E-mail</label>
           <input class="field" type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
