--- a/index.html
+++ b/index.html
@@ -258,14 +258,14 @@
               <div class="wrapper-choice-grownup">
                 <button class="butten-minus minus">
                   <svg width="13" height="1" viewBox="0 0 13 1" xmlns="http://www.w3.org/2000/svg">
-                    <path opacity="0.3" d="M0 0L0 1L13 1V0L0 0Z"/>
+                    <path opacity="0.3" d="M0 0L0 1L13 1V0L0 0Z" />
                   </svg>
                   <span class="visually-hidden">Минус</span>
                 </button>
                 <input class="grownup-number" id="number-minus" type="text" value="2">
                 <button class="button-plus plus">
                   <svg width="13" height="13" viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M13 6H7V0H6v6H0v1h6v6h1V7h6V6Z"/>
+                    <path d="M13 6H7V0H6v6H0v1h6v6h1V7h6V6Z" />
                   </svg>
                   <span class="visually-hidden">Плюс</span>
                 </button>
@@ -276,7 +276,8 @@
                 <label class="child-label" for="">Дети:</label>
                 <span class="tooltip">
                   <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label"></button>
-                  <span class="tooltip-text" role="tooltip" id="tooltip-label">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                  <span class="tooltip-text" role="tooltip" id="tooltip-label">Укажите количество детей, которые будут с
+                    вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
                 </span>
               </span>
               <div class="wrapper-choice-kids">
