--- a/8/catalog.html
+++ b/8/catalog.html
@@ -68,7 +68,6 @@
                       d="m.162 6.15 6-5.5 6 5.5v6.2h-12v-6.2Zm1 .4v4.8h10v-4.8l-5-4.5-5 4.5Zm4 3.8h-1v-3.5h4v3.5h-1v-2.5h-2v2.5Z" />
                   </svg>
                 </li>
-                <li class="breadcrumbs-icon"></li>
                 <li class="breadcrumbs-item">
                   <a class="breadcrumbs-link">Гостиницы</a>
                 </li>
@@ -298,7 +297,8 @@
       </main>
       <section class="appointment-catalog">
         <h2 class="appointment-catalog-title">Подпишитесь на рассылку</h2>
-        <p class="appointment-catalog-paragraph">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+        <p class="appointment-catalog-paragraph">Только полезная информация и никакого спама,<br> честное бойскаутское!
+        </p>
         <form class="appointment-catalog-form-email" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="appointment-email">E-mail</label>
           <input class="field" type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
