:heavy_check_mark: Сборка #8

--- a/8/catalog.html
+++ b/8/catalog.html
@@ -28,7 +28,7 @@
           </ul>
           <ul class="navigation-list navigation-user">
             <li class="navigation-item">
-              <a class="navigation-link" href="#">
+              <a class="navigation-link navigation-link-search" href="#">
                 <span class="visually-hidden">Поиск</span>
                 <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="19"
                   xmlns="http://www.w3.org/2000/svg">
@@ -38,9 +38,9 @@
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#">
+              <a class="navigation-link navigation-link-favorite" href="#">
                 <span class="visually-hidden">Избранное</span>
-                <div class="navigation-link-favorite">
+                <div class="navigation-link-favorite-number">
                   <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
