:heavy_check_mark: Сборка #8

--- a/8/index.html
+++ b/8/index.html
@@ -84,7 +84,7 @@
                     <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом">
                   </div>
                   <h3 class="advantages-item-title advantages-city">Жильё</h3>
-                  <div class="advantages-description description-city">Рекомендуем пожить в настоящем мотеле, всё как в
+                  <div class="advantages-description description-city">Рекомендуем пожить<br>в настоящем мотеле,<br> всё как в
                     кино!</div>
                 </div>
               </li>
@@ -113,7 +113,7 @@
                 <div class="container-advantages">
                   <h3 class="advantages-item-title">Там есть<br>мост дьявола</h3>
                   <div class="advantages-numb">— №2 —</div>
-                  <div class=”advantages-description”>Да, по нему можно пройти!<br>Если вы осмелитесь, разумеется</div>
+                  <div class="advantages-description">Да, по нему можно пройти!<br>Если вы осмелитесь, разумеется</div>
                 </div>
                 <div class="advantages-image-city">
                   <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
