чинит карточки товаров в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -236,7 +236,7 @@
                 </a>
                 <div class="inner-description">
                   <p class="description-title">Гостиница</p>
-                  <p class="price">От 2500 ₽</p>
+                  <p class="description-price">От 2500 ₽</p>
                   <a class="button-detailed" href="#">подробнее</a>
                   <a class="button-favourites" href="#">в избранное</a>
                   <span class="product-stars"></span>
@@ -253,7 +253,7 @@
                 </a>
                 <div class="inner-description">
                   <p class="description-title">Гостиница</p>
-                  <p class="price">От 1500 ₽</p>
+                  <p class="description-price">От 1500 ₽</p>
                   <a class="button-detailed" href="#">подробнее</a>
                   <a class="button-favourites" href="#">в избранное</a>
                   <span class="product-stars"></span>
