добавляет один br. описание

--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
                     <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом">
                   </div>
                   <h3 class="advantages-item-title advantages-city">Жильё</h3>
-                  <div class="advantages-description description-city">Рекомендуем пожить<br>в настоящем мотеле, всё
-                    как в
-                    кино!</div>
+                  <div class="advantages-description description-city">Рекомендуем пожить <br> в настоящем мотеле,
+                    всё как в кино!</div>
                 </div>
               </li>
               <li class="advantages-item">
