--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <p class="appointment-paragraph">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
         <form class="appointment-form-email" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="appointment-email">E-mail</label>
-          <input class="field" type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
+          <input class="field" type="text" id="appointment-email" name="appointment-email" required="required" placeholder="Ваш e-mail">
           <button class="button button-appointment" type="submit">подписаться</button>
         </form>
       </section>
@@ -232,7 +232,7 @@
               <span class="visually-hidden">Календарь</span>
             </span>
             <label class="arrival-date" for="check-in">Дата заезда</label>
-            <input class="text-input" id="check-in" type="text" placeholder="27 апреля 2020">
+            <input class="text-input" id="check-in" type="text" required="required" placeholder="27 апреля 2020">
           </div>
           <p class="date-text">Мы не можем отправить вас в прошлое</p>
           <div class="modal-shape">
@@ -247,7 +247,7 @@
               <span class="visually-hidden">Календарь</span>
             </span>
             <label class="departure-date" for="exit">Дата выезда</label>
-            <input class="text-input" id="exit" type="text" placeholder="1 сентября 2021">
+            <input class="text-input" id="exit" type="text" required="required" placeholder="1 сентября 2021">
           </div>
           <p class="date-text text-number">На эти даты есть свободные номера. Пока есть.</p>
           <div class="wrapper-buttons">
@@ -260,7 +260,7 @@
                   </svg>
                   <span class="visually-hidden">Минус</span>
                 </button>
-                <input class="grownup-number" id="choice-grownup" type="text" value="2">
+                <input class="grownup-number" id="choice-grownup" type="text" value="2" required="required">
                 <button class="button-plus plus">
                   <svg width="13" height="13" viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 6H7V0H6v6H0v1h6v6h1V7h6V6Z" />
@@ -285,7 +285,7 @@
                   </svg>
                   <span class="visually-hidden">Минус</span>
                 </button>
-                <input class="child-number" id="choice-kids" type="text" value="1">
+                <input class="child-number" id="choice-kids" type="text" value="1" required="required">
                 <button class="button-plus plus">
                   <svg width="13" height="13" viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 6H7V0H6v6H0v1h6v6h1V7h6V6Z" />
