ставит точки в конце alt

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header class="page-header">
         <nav class="navigation">
           <a class="page-logo">
-            <img class="logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седона">
+            <img class="logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седона.">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -58,7 +58,7 @@
       <main class="main-container main-index">
         <div class="page-container">
           <div class="container-logo">
-            <img class="logo-welcome" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA">
+            <img class="logo-welcome" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA.">
           </div>
           <div class="container-title">
             <h1 class="main-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h1>
@@ -74,13 +74,13 @@
                   <div class=”advantages-description”>Седона — не аттракцион для<br>туристов, там течёт своя жизнь</div>
                 </div>
                 <div class="advantages-image-city">
-                  <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
+                  <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона.">
                 </div>
               </li>
               <li class="advantages-item color-block">
                 <div class="container-advantages container-advantages-icon">
                   <div class="advantages-item-image">
-                    <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом">
+                    <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом.">
                   </div>
                   <h3 class="advantages-item-title advantages-city">Жильё</h3>
                   <div class="advantages-description description-city">Рекомендуем пожить <br> в настоящем мотеле,
@@ -90,7 +90,7 @@
               <li class="advantages-item">
                 <div class="container-advantages container-advantages-icon">
                   <div class="advantages-item-image">
-                    <img class="image" src="images/food-icons.svg" width="74" height="70" alt="Бургер">
+                    <img class="image" src="images/food-icons.svg" width="74" height="70" alt="Бургер.">
                   </div>
                   <h3 class="advantages-item-title advantages-city">Еда</h3>
                   <div class="advantages-description description-city">Всегда заказывайте<br>топовый фирменный бургер,
@@ -101,7 +101,7 @@
               <li class="advantages-item color-block">
                 <div class="container-advantages container-advantages-icon">
                   <div class="advantages-item-image">
-                    <img class="image" src="images/souvenirs-icons.svg" width="64" height="76" alt="Подарок">
+                    <img class="image" src="images/souvenirs-icons.svg" width="64" height="76" alt="Подарок.">
                   </div>
                   <h3 class="advantages-item-title advantages-city">Сувениры</h3>
                   <div class="advantages-description description-city">Не только китайского,<br>но и настоящего местного
@@ -115,7 +115,7 @@
                   <div class="advantages-description">Да, по нему можно пройти!<br>Если вы осмелитесь, разумеется</div>
                 </div>
                 <div class="advantages-image-city">
-                  <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
+                  <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон.">
                 </div>
               </li>
               <li class="advantages-item color-block">
