--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
       <header class="page-header">
         <nav class="navigation">
           <a class="page-logo" href="index.html">
-            <img class="logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седона">
+            <img class="logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седона.">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -197,7 +197,7 @@
               <li class="product-card">
                 <a class="product-card-image-link" href="#">
                   <img class="product-card-image" src="images/hotel-1-1.jpg" width="300" height="211"
-                    alt="Вид на звездное небо через ущелье коньона">
+                    alt="Вид на звездное небо через ущелье коньона.">
                 </a>
                 <a class="product-card-title-link" href="#">
                   <h3 class="product-card-title">Amara Resort & Spa</h3>
@@ -214,7 +214,7 @@
               <li class="product-card">
                 <a class="product-card-image-link" href="#">
                   <img class="product-card-image" src="images/hotel-1-2.jpg" width="300" height="211"
-                    alt="Вид на горы в Villas at Poco Diablo">
+                    alt="Вид на горы в Villas at Poco Diablo.">
                 </a>
                 <a class="product-card-title-link" href="#">
                   <h3 class="product-card-title">Villas at Poco Diablo</h3>
@@ -231,7 +231,7 @@
               <li class="product-card">
                 <a class="product-card-image-link" href="#">
                   <img class="product-card-image" src="images/hotel-1-3.jpg" width="300" height="211"
-                    alt="Вид на горы в Desert Quail Inn">
+                    alt="Вид на горы в Desert Quail Inn.">
                 </a>
                 <a class="product-card-title-link" href="#">
                   <h3 class="product-card-title">Desert Quail Inn</h3>
@@ -248,7 +248,7 @@
               <li class="product-card">
                 <a class="product-card-image-link" href="#">
                   <img class="product-card-image" src="images/hotel-1.jpg" width="300" height="211"
-                    alt="Звездное небо и горы в GreenTree Inn">
+                    alt="Звездное небо и горы в GreenTree Inn.">
                 </a>
                 <a class="product-card-title-link" href="#">
                   <h3 class="product-card-title">GreenTree Inn</h3>
