--- a/catalog.html
+++ b/catalog.html
@@ -147,7 +147,7 @@
                   </div>
                   <div class="range">
                     <div class="range-scale">
-                      <div class="range-bar" style="left: 0; width: 236px">
+                      <div class="range-bar">
                         <button class="range-toggle toggle-min">
                           <span class="visually-hidden">Изменить минимальную цену.</span>
                         </button>
