--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               </svg>
               <span class="visually-hidden">Календарь</span>
             </span>
-            <label class="arrival-date" for="check-in">Дата заезда</label>
+            <label class="arrival-date" for="check-in">Дата заезда:</label>
             <input class="text-input" id="check-in" type="text" required="required" placeholder="27 апреля 2020">
           </div>
           <p class="date-text">Мы не можем отправить вас в прошлое</p>
@@ -246,7 +246,7 @@
               </svg>
               <span class="visually-hidden">Календарь</span>
             </span>
-            <label class="departure-date" for="exit">Дата выезда</label>
+            <label class="departure-date" for="exit">Дата выезда:</label>
             <input class="text-input" id="exit" type="text" required="required" placeholder="1 сентября 2021">
           </div>
           <p class="date-text text-number">На эти даты есть свободные номера. Пока есть.</p>
