меняет ссылку на кнопку

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
               </div>
             </div>
           </div>
-          <a class="button button-find" href="#">Найти</a>
+          <button  class="button button-find" href="#">Найти</button>
         </form>
       </div>
     </div>
