ставит пробелы и неразрывные пробелы в разметке

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img class="logo-welcome" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA.">
           </div>
           <div class="container-title">
-            <h1 class="main-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h1>
+            <h1 class="main-title">Седона — небольшой городок в&nbsp;Аризоне,<br>заслуживающий большего!</h1>
             <p class="main-paragraph">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
           </div>
           <section class="advantages">
@@ -147,7 +147,7 @@
             <h2 class="visually-hidden">Поиск гостиницы</h2>
             <strong class="interest">Заинтересовались?</strong>
             <p class="best">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в
-              Седоне
+              Седоне  
             </p>
             <a class="button button-search" href="#"><b>Поиск гостиницы в Седоне</b></a>
           </section>
@@ -231,7 +231,7 @@
               </svg>
               <span class="visually-hidden">Календарь</span>
             </span>
-            <label class="arrival-date" for="check-in">Дата заезда:</label>
+            <label class="arrival-date" for="check-in">Дата&nbsp;заезда:</label>
             <input class="text-input" id="check-in" type="text" required="required" placeholder="27 апреля 2020">
           </div>
           <p class="date-text">Мы не можем отправить вас в прошлое</p>
@@ -246,7 +246,7 @@
               </svg>
               <span class="visually-hidden">Календарь</span>
             </span>
-            <label class="departure-date" for="exit">Дата выезда:</label>
+            <label class="departure-date" for="exit">Дата&nbsp;выезда:</label>
             <input class="text-input" id="exit" type="text" required="required" placeholder="1 сентября 2021">
           </div>
           <p class="date-text text-number">На эти даты есть свободные номера. Пока есть.</p>
