--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
           <section class="search">
             <h2 class="visually-hidden">Поиск гостиницы</h2>
             <strong class="interest">Заинтересовались?</strong>
-            <p class="best">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в
-              Седоне  
+            <p class="best">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне
             </p>
             <a class="button button-search" href="#"><b>Поиск гостиницы в Седоне</b></a>
           </section>
