--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом.">
                   </div>
                   <h3 class="advantages-item-title advantages-city">Жильё</h3>
-                  <div class="advantages-description description-city">Рекомендуем пожить <br> в настоящем мотеле,
+                  <div class="advantages-description description-city">Рекомендуем пожить в&nbsp;настоящем мотеле,<br>
                     всё как в кино!</div>
                 </div>
               </li>
