изменяет классы для container-advantages

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 </div>
               </li>
               <li class="advantages-item color-block">
-                <div class="container-advantages container-advantages-icon">
-                  <div class="advantages-item-image">
+                <div class="container-advantages container-advantages-home">
+                  <div class="advantages-item-image home">
                     <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом.">
                   </div>
                   <h3 class="advantages-item-title advantages-city">Жильё</h3>
@@ -88,8 +88,8 @@
                 </div>
               </li>
               <li class="advantages-item">
-                <div class="container-advantages container-advantages-icon">
-                  <div class="advantages-item-image">
+                <div class="container-advantages container-advantages-food">
+                  <div class="advantages-item-image food">
                     <img class="image" src="images/food-icons.svg" width="74" height="70" alt="Бургер.">
                   </div>
                   <h3 class="advantages-item-title advantages-city">Еда</h3>
@@ -99,8 +99,8 @@
                 </div>
               </li>
               <li class="advantages-item color-block">
-                <div class="container-advantages container-advantages-icon">
-                  <div class="advantages-item-image">
+                <div class="container-advantages container-advantages-souvenirs">
+                  <div class="advantages-item-image souvenirs">
                     <img class="image" src="images/souvenirs-icons.svg" width="64" height="76" alt="Подарок.">
                   </div>
                   <h3 class="advantages-item-title advantages-city">Сувениры</h3>
