--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
               </div>
             </div>
           </div>
-          <button  class="button button-find" href="#">Найти</button>
+          <button class="button button-find" type="submit">Найти</button>
         </form>
       </div>
     </div>
