--- a/index.html
+++ b/index.html
@@ -278,14 +278,14 @@
               </span>
               <div class="wrapper-choice-kids">
                 <button class="butten-minus minus">
-                  <svg width="13" height="1" viewBox="0 0 13 1" xmlns="http://www.w3.org/2000/svg" role="img">
+                  <svg width="13" height="1" viewBox="0 0 13 1" fill="#000000" xmlns="http://www.w3.org/2000/svg" role="img">
                     <path opacity="0.3" d="M0 0L0 1L13 1V0L0 0Z" />
                   </svg>
                   <span class="visually-hidden">Минус</span>
                 </button>
                 <input class="child-number" id="choice-kids" type="text" value="1" required="required">
                 <button class="button-plus plus">
-                  <svg width="13" height="13" viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg" role="img">
+                  <svg width="13" height="13" viewBox="0 0 13 13" fill="#000000" xmlns="http://www.w3.org/2000/svg" role="img">
                     <path d="M13 6H7V0H6v6H0v1h6v6h1V7h6V6Z" />
                   </svg>
                   <span class="visually-hidden">Плюс</span>
