вставляет в тултип стрелочку

--- a/index.html
+++ b/index.html
@@ -272,6 +272,11 @@
                 <label class="child-label" for="choice-kids">Дети:</label>
                 <span class="tooltip">
                   <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label"></button>
+                  <span class="arrow-tooltip">
+                  <svg width="19" height="9" viewBox="0 0 19 9" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9.5 0 19 9H0l9.5-9Z" fill="#333"/>
+                  </svg>
+                 </span>
                   <span class="tooltip-text" role="tooltip" id="tooltip-label">Укажите количество детей, которые будут с
                     вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
                 </span>
